src/objects/AB2__AdBookDynamicPropertyValue__c.object
<CustomObject>
    <description>Actual AdBook Dynamic Property Values for either a specific Order (Opportunity) or Drop (OpportunityLineItem). These are the records that users create per Order or Drop.</description>
    <fields>
        <fullName>AB2__AdBookDynamicProperty__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The AdBook Dynamic Property Type</description>
        <inlineHelpText>The AdBook Dynamic Property Type</inlineHelpText>
        <label>AdBook UDF</label>
        <referenceTo>AB2__AdBookDynamicProperty__c</referenceTo>
        <relationshipLabel>AdBook UDF Values</relationshipLabel>
        <relationshipName>AdBook_Dynamic_Property_Values</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__BooleanValue__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean Value (if applicable)</description>
        <inlineHelpText>Boolean Value (if applicable)</inlineHelpText>
        <label>Boolean Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__DateTimeValue__c</fullName>
        <description>DateTime Value (if applicable)</description>
        <inlineHelpText>DateTime Value (if applicable)</inlineHelpText>
        <label>DateTime Value</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AB2__DateValue__c</fullName>
        <description>Date Value (if applicable)</description>
        <inlineHelpText>Date Value (if applicable)</inlineHelpText>
        <label>Date Value</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AB2__DecimalValue__c</fullName>
        <description>Decimal Value (if applicable).
Up to 16 digits to the left of the decimal point and 2 decimal places.</description>
        <inlineHelpText>Decimal Value (if applicable).
Up to 16 digits to the left of the decimal point and 2 decimal places.</inlineHelpText>
        <label>Decimal Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__DropOpportunityLineItemId__c</fullName>
        <description>Optional static reference to the OpportunityLineItemId from the Drop. 
DEPRECATED - Data has been migrated to the Drop Record ID field.
If there are more than 200,000 records a custom index will be required on this field (ref HD-7994)</description>
        <inlineHelpText>Optional static reference to the OpportunityLineItemId from the Drop.</inlineHelpText>
        <label>(Deprecated) Drop Opportunity Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__DropRecordId__c</fullName>
        <description>Optional static reference to the OpportunityLineItemId or AB2__AdBookPackageDrop__c from the Drop. 
Note: It isn&apos;t currently possible to have a Lookup relationship to OpportunityLineItem. 
Marked as External ID so that it is indexed. However, it isn&apos;t unique. Multiple UDF values can reference the same OLI</description>
        <externalId>true</externalId>
        <inlineHelpText>Optional static reference to the record for the Drop.</inlineHelpText>
        <label>Drop Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__DynamicPropertyID__c</fullName>
        <formula>AB2__AdBookDynamicProperty__r.AB2__DynamicPropertyID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UDF ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__DynamicPropertyIsVisible__c</fullName>
        <description>Is the associated AdBook UDF Visible to users?</description>
        <formula>AB2__AdBookDynamicProperty__r.AB2__IsVisible__c</formula>
        <inlineHelpText>Is the associated AdBook UDF Visible to users?</inlineHelpText>
        <label>UDF Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AB2__DynamicPropertyType__c</fullName>
        <formula>TEXT(AB2__AdBookDynamicProperty__r.AB2__DynamicPropertyType__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>UDF Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__IndependentDrop__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Optional lookup to the independent drop</description>
        <inlineHelpText>Optional lookup to the AdBook Line Item</inlineHelpText>
        <label>AdBook Line Item</label>
        <referenceTo>AB2__AdBookIndependentDrop__c</referenceTo>
        <relationshipLabel>AdBook UDF Values</relationshipLabel>
        <relationshipName>AdBook_UDF_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__IntegerValue__c</fullName>
        <description>Integer Value (if applicable)</description>
        <inlineHelpText>Integer Value (if applicable)</inlineHelpText>
        <label>Integer Value</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AB2__ListValue__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>List Value (if applicable)</description>
        <inlineHelpText>List Value (if applicable)</inlineHelpText>
        <label>List Value</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AB2__AdBookDynamicPropertyListValues__c.AB2__AdBookDynamicProperty__c</field>
                <operation>equals</operation>
                <valueField>$Source.AB2__AdBookDynamicProperty__c</valueField>
            </filterItems>
            <infoMessage>The selected AdBook UDF List Value must belong to the selected AdBook UDF.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>AB2__AdBookDynamicPropertyListValues__c</referenceTo>
        <relationshipLabel>AdBook UDF Values</relationshipLabel>
        <relationshipName>AdBook_Dynamic_Property_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AB2__ObjectType__c</fullName>
        <formula>TEXT(AB2__AdBookDynamicProperty__r.AB2__ObjectType__c)</formula>
        <label>Object Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AB2__OpportunityIdDynamicPropertyIdUnique__c</fullName>
        <description>Concatenation of the Opportunity Id and the Dynamic Property ID (Number 18,0) and the optional Drop Opportunity Line Item Id
Used to enforce uniqueness via a field workflow rule that will set the value.</description>
        <inlineHelpText>Used internally to enforce uniqueness for Opportunity Id, UDF Id, and optional Drop Opportunity Line Item Id</inlineHelpText>
        <label>Opportunity - UDF Id Uniqueness</label>
        <length>54</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AB2__Opportunity__c</fullName>
        <description>The Opportunity this AdBook Dynamic Field applies to</description>
        <inlineHelpText>The Opportunity this AdBook Dynamic Field applies to</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>AdBookDynamicPropertyValues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>AB2__TextValue__c</fullName>
        <description>Text Value (if applicable)</description>
        <inlineHelpText>Text Value (if applicable)</inlineHelpText>
        <label>Text Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <label>AdBook UDF Value</label>
    <nameField>
        <label>AdBook UDF Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AdBook UDF Values</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AB2__DropUdfsRequireIndependentDrop</fullName>
        <active>true</active>
        <description>If the UDF Object Type is Drop there must be an associated Independent Drop.</description>
        <errorConditionFormula>$Setup.AB2__AdBook_Settings__c.AB2__UseIndependentDrops__c  &amp;&amp;
ISPICKVAL(AB2__AdBookDynamicProperty__r.AB2__ObjectType__c, &apos;Drop&apos;) &amp;&amp;  AB2__IndependentDrop__c  == null</errorConditionFormula>
        <errorDisplayField>AB2__IndependentDrop__c</errorDisplayField>
        <errorMessage>UDF Value missing Independent Drop (AdBook Line Item) association</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>AB2__DropUdfsRequireOliId</fullName>
        <active>true</active>
        <description>If the UDF Object Type is Drop there must be an associated OLI Id.
NOTE: If this is failing in test cases, check the AdBook_Settings__c.getOrgDefaults().UseIndependentDrops__c value</description>
        <errorConditionFormula>NOT($Setup.AB2__AdBook_Settings__c.AB2__UseIndependentDrops__c) &amp;&amp;
ISPICKVAL(AB2__AdBookDynamicProperty__r.AB2__ObjectType__c, &apos;Drop&apos;) &amp;&amp; AB2__DropRecordId__c == null</errorConditionFormula>
        <errorDisplayField>AB2__DropRecordId__c</errorDisplayField>
        <errorMessage>UDF Value missing Opportunity Line Item (Product) association</errorMessage>
    </validationRules>
</CustomObject>